<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|fill_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:showDividers="middle"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|bottom"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/max_measure"
                        android:textColor="@color/warmDarkGray"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterMaxValueEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="left|center"
                        android:hint="@string/enter_maximum"
                        android:inputType="numberDecimal"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|bottom"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/min_measure"
                        android:textColor="@color/warmDarkGray"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/enterMinValueEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edit_text_style"
                        android:gravity="left|center"
                        android:hint="@string/enter_minimum"
                        android:inputType="numberDecimal"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />

                    <TextView
                        android:id="@+id/valueRangeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|bottom"
                        android:hint="@string/calculated_data_text_view"
                        android:textSize="12dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/detailedMeasureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/calculated_data_text_view"
                    android:background="@color/absoluteWhite"
                    android:paddingTop="8dp"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    android:paddingBottom="8dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>