<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|fill_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="13dp"
                    android:paddingBottom="8dp"
                    android:text="@string/support_measure_title"
                    android:textColor="@color/warmDarkGray"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_style">

                    <TextView
                        android:id="@+id/supportMeasureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculated_data_text_view"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="3dp" />

                    <Button
                        android:id="@+id/moreSupportMeasureDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_selector"
                        android:textStyle="bold"
                        android:text="@string/more_details_button"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="13dp"
                    android:paddingBottom="8dp"
                    android:text="@string/confidence_measure_title"
                    android:textColor="@color/warmDarkGray"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_style">

                    <TextView
                        android:id="@+id/confidenceMeasureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculated_data_text_view"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="3dp" />

                    <Button
                        android:id="@+id/moreConfidenceMeasureDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/more_details_button"
                        android:textStyle="bold"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

                <TextView
                    android:text="@string/lift_measure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/warmDarkGray"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="13dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_style">

                    <TextView
                        android:id="@+id/liftMeasureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculated_data_text_view"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="3dp" />

                    <Button
                        android:id="@+id/moreLiftMeasureDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/more_details_button"
                        android:textStyle="bold"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

                <TextView
                    android:text="@string/leverage_measure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/warmDarkGray"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="13dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_style">

                    <TextView
                        android:id="@+id/leverageMeasureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculated_data_text_view"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="3dp" />

                    <Button
                        android:id="@+id/moreLeverageMeasureDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_selector"
                        android:textStyle="bold"
                        android:text="@string/more_details_button"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

                <TextView
                    android:text="@string/conviction_measure_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/warmDarkGray"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:paddingTop="13dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/edit_text_style">

                    <TextView
                        android:id="@+id/convictionMeasureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/calculated_data_text_view"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="3dp" />

                    <Button
                        android:id="@+id/moreConvictionMeasureDetailsButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/more_details_button"
                        android:textStyle="bold"
                        style="?android:attr/borderlessButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>